--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.service-item:hover {
+  -webkit-box-shadow: 3px 4px 8px 0px #000000;
+  box-shadow: 3px 4px 8px 0px #000000;
+  border-radius: 10px;
+}
+
 .App {
   text-align: center;
 }
@@ -32,6 +38,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
