--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   -webkit-box-shadow: 3px 4px 8px 0px #000000;
   box-shadow: 3px 4px 8px 0px #000000;
   border-radius: 10px;
+  padding: 10px;
+}
+.first-service-item {
+  -webkit-box-shadow: 3px 4px 8px 0px #000000;
+  box-shadow: 3px 4px 8px 0px #000000;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .App {
