banner img change

--- a/src/pages/Home/Banner1/Banner1.css
+++ b/src/pages/Home/Banner1/Banner1.css
@@ -1,5 +1,5 @@
 .bannerImg{
-    background-image: url('../../../assets/images/doctor.webp');
+    background-image: url('../../../assets/images/banner.jpg');
     padding: 12rem 5rem;
     background-color: black;
     background-attachment: fixed;
